# agentic-rag-retrieval-and-fallback-agents

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/chromadb/: chroma.sqlite3
docs/: README.md  architecture.md  product_overview.md  requirements.md  rubric_alignment.md
examples/: run_agent.py  run_rag.py
src/game_research/: __init__.py  cli.py
src/game_research/models/: __init__.py  answer.py  evaluation.py  game.py  messages.py  parsers.py
src/game_research/prompts/: README.md
src/game_research/services/: __init__.py  agent_workflow.py  agents.py  data.py  llm.py  loaders.py  memory.py  rag.py  vector_db.py
tests/: test_cli.py  test_data.py
